# hektor

./: .editorconfig  .gitattributes  .gitignore  ADVANCED_FEATURES_README.md  ANALYSIS_EXECUTIVE_SUMMARY.md  BENCHMARK_STATUS.md  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.patch  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ELECTRON_UI_CHECKLIST.md  ELECTRON_UI_DESIGN.md  ELECTRON_UI_INDEX.md  EXPLORATION_INDEX.md  EXPLORATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_NEW.md  IMPLEMENTATION_SUMMARY_v3.0.0.md  INDEX.md  INSTALL.md  LICENSE  MANIFEST.in  ML_FRAMEWORK_SETUP_STATUS.md  NEW_FEATURES.md  PUSH_v2.2.0_TAG.sh  README.md  README_zh.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.2.0.md  RELEASE_v4.0.0_INSTRUCTIONS.md  SECURITY.md  SECURITY_REPORT.md  SEGFAULT_FIX_SUMMARY.md  STATISTICS.md  SUMMARY.md  USAGE_EXAMPLES.md  (+7 more)
.SCOPE/marketing/: QUICK_START.md  README.md
.github/: ACTIONS_CLEANUP_GUIDE.md
.github/workflows/: build-linux.yml  ci.yml  codeql.yml  docker-publish.yml  release.yml
.studio/: ELECTRON_UI_BUILD.md  ELECTRON_UI_DESIGN.md  README.md
.studio/hektor-app/: .gitignore  CMakeLists.txt  CORE_IMPLEMENTATION_ROADMAP.md  FINAL_PROJECT_STATUS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  binding.gyp  package.json  tailwind.config.js  test-generator.js  tsconfig.json
.studio/hektor-app/docs/: ANALYTICS_MONITORING_DESIGN.md  DESIGN_DOCUMENTS_SUMMARY.md  INDEX.md  THEME_SYSTEM.md
.studio/hektor-app/electron-app/main/: index.ts  tsconfig.json
.studio/hektor-app/electron-app/preload/: index.ts
.studio/hektor-app/electron-app/renderer/src/: App.tsx  index.css
.studio/hektor-app/native-addon/: README.md
.studio/hektor-app/native-addon/include/: async_operations.h  common.h  database.h  distributed.h  embeddings.h  framework.h  hybrid.h  ingestion.h  rag.h  search.h  utils.h
.studio/hektor-app/native-addon/src/: binding.cpp  common.cpp  database.cpp  distributed.cpp  embeddings.cpp  framework.cpp  hybrid.cpp  index_mgmt.cpp  ingestion.cpp  quantization.cpp  rag.cpp  storage.cpp  telemetry.cpp  utils.cpp
.studio/hektor-app/native-addon/types/: hektor-native.d.ts
.studio/hektor-app/test_db/: config.json
.studio/hektor-app/themes/: forest-green-dark.json  midnight-purple-dark.json  quantum-slate-dark.json  sunset-amber-light.json
api/: README.md  requirements.txt
benchmark/: .gitignore  BENCHMARK_RUN_20260127.md  BILLION_SCALE_PQ_BENCHMARK_SUMMARY.md  COMPREHENSIVE_BENCHMARK_REPORT.md  EXECUTION_SUMMARY.txt  README.md  USAGE.md
benchmark/configs/: database.yaml  studio.yaml
benchmark/reports/: current_run.txt
benchmark/scripts/: generate_report.py  run_all.sh  run_database.sh  run_studio.sh
bindings/python/: pyvdb.cpp
docs/: 00_INDEX.md  01_INTRODUCTION.md  01_README.md  02_GETTING_STARTED.md  02_INSTALLATION.md  03_QUICKSTART.md  03_USER_GUIDE.md  04_DATA_FORMATS.md  04_USER_GUIDE.md  05_ARCHITECTURE.md  05_DATA_INGESTION.md  06_ARCHITECTURE.md  06_DATA_FORMATS.md  07_API_REFERENCE.md  07_DATA_INGESTION.md  08_EMBEDDINGS_MODELS.md  08_MODELS.md  09_MATH.md  09_VECTOR_OPERATIONS.md  10_AI_TRAINING.md  10_HYBRID_SEARCH.md  11_DISTRIBUTED_SYSTEM.md  11_LOGGING.md  12_ML_FRAMEWORK.md  12_USAGE_EXAMPLES.md  13_DEPLOYMENT.md  13_LLM_ENGINE.md  14_QUANTIZATION.md  14_REAL_WORLD_APPLICATIONS.md  15_EBPF_OBSERVABILITY.md  15_LOGGING_MONITORING.md  15_OPENTELEMETRY_INSTALLATION.md  15_OPENTELEMETRY_TRACING.md  16_DEPLOYMENT.md  16_QUANTIZATION.md  17_FRED_HTTP.md  17_HTTP_ADAPTER.md  17_PERFORMANCE_TUNING.md  18_ADVANCED_FEATURES.md  18_SECURITY.md  (+50 more)
docs/.ARTICLES/: README.md  avx512-simd-optimization.md  hdr-display-standards.md  hybrid-search-architecture.md  rag-production-guide.md  smpte-st2084-implementation.md
docs/.BLOG/: README.md  hektor-41-release.md  perceptual-quantization-deep-dive.md  studio-architecture.md
docs/.CHANGELOG/: CHANGELOG.md  v4.1.1.md
docs/.RESEARCH/: BUILD.md  NODE22_COMPAT.md  README.md  hnsw_algorithm.md  perceptual_quantization.md  temporal_redundancy.md  vector_space_theory.md
docs/.SCOPE/: DOCUMENTATION_INDEX.md  README.md  bench.json  collect_benchmarks.py  collect_benchmarks.sh
docs/SCOPE/: COMPETITIVE_COMPARISON.html  COMPETITOR_ANALYSIS.json  COMPETITOR_ANALYSIS.md  DOCUMENTATION_INDEX.md  HEKTOR_ANALYSIS.json  HEKTOR_ANALYSIS.md  README.md  hektor.html
docs/analysis/: ANALYSIS_QUICK_REFERENCE.md  DOCUMENTATION_GAPS.md
docs/backup_20260106_203826/: 01_README.md  02_GETTING_STARTED.md  03_USER_GUIDE.md  04_DATA_FORMATS.md  05_DATA_INGESTION.md  06_ARCHITECTURE.md  07_API_REFERENCE.md  08_MODELS.md  09_MATH.md  10_AI_TRAINING.md  11_LOGGING.md  12_USAGE_EXAMPLES.md  13_DEPLOYMENT.md  14_REAL_WORLD_APPLICATIONS.md  15_LLM_ENGINE.md  17_FRED_HTTP.md  18_ADVANCED_FEATURES.md  README.md  (+9 more)
examples/: README.md  distributed_demo.py  hybrid_search_demo.py  python_hybrid_search.py  rag_framework_demo.py  sample_data.xml
k8s/: namespace.yaml
pyvdb/: __init__.py
research/: INDEX.md
scope/: README.md
scripts/: create_release_tag.sh  prepare_release_v2.2.0.sh  reorganize_docs.ps1  setup.ps1  setup_ml_framework.ps1  verify_packages.py
src/: database.cpp
src/cli/: CMakeLists.txt  README.md  cli.cpp  colors.cpp  interactive_shell.cpp  main.cpp  progress.cpp
src/cli/commands/: collection_commands.cpp  data_commands.cpp  db_commands.cpp  export_commands.cpp  hybrid_commands.cpp  index_commands.cpp  ingest_commands.cpp  search_commands.cpp
src/cli/docs/: CLI_COMMAND_MAP.md  CLI_DESIGN.md  CLI_IMPLEMENTATION.md  CLI_QUICK_REFERENCE.md  CLI_VISUAL_SUMMARY.md  USAGE.md
studio/: README.md  system_map.json  system_map.md
tests/: conftest.py  test_bm25.cpp  test_competitor_analysis.py  test_concurrent_stress.cpp  test_documentation.py  test_embeddings.cpp  test_flat_index.cpp  test_hnsw.cpp  test_hybrid_search.cpp  test_perceptual_quantization.cpp  test_rag.cpp  test_storage.cpp  test_vector_ops.cpp
ui/: DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json
(+218 files in other folders)
