# ============================================================================
# VectorDB - High-Performance Vector Database for Gold Standard
# ============================================================================
cmake_minimum_required(VERSION 3.20)
project(VectorDB VERSION 1.0.0 LANGUAGES CXX)

# ============================================================================
# Build Configuration
# ============================================================================
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Enable position independent code globally for shared library support
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# Build type defaults
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

# ============================================================================
# Options
# ============================================================================
option(VDB_BUILD_TESTS "Build unit tests" ON)
option(VDB_BUILD_BENCHMARKS "Build benchmarks" OFF)
option(VDB_BUILD_PYTHON "Build Python bindings" ON)
option(VDB_USE_AVX2 "Enable AVX2 SIMD optimizations" ON)
option(VDB_USE_AVX512 "Enable AVX-512 SIMD optimizations" OFF)
option(VDB_ENABLE_GPU "Enable GPU acceleration via ONNX DirectML/CUDA" OFF)

# ============================================================================
# Compiler Flags
# ============================================================================
if(MSVC)
    add_compile_options(/W4 /permissive-)
    if(VDB_USE_AVX2)
        add_compile_options(/arch:AVX2)
    endif()
    if(VDB_USE_AVX512)
        add_compile_options(/arch:AVX512)
    endif()
    # Release optimizations
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O2 /Oi /Ot /GL")
    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG")
else()
    add_compile_options(-Wall -Wextra -Wpedantic)
    if(VDB_USE_AVX2)
        add_compile_options(-mavx2 -mfma)
    endif()
    if(VDB_USE_AVX512)
        add_compile_options(-mavx512f -mavx512dq)
    endif()
    # Release optimizations
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native -flto")
endif()

# ============================================================================
# Dependencies (FetchContent for header-only libs)
# ============================================================================
include(FetchContent)

# nlohmann/json - JSON parsing
FetchContent_Declare(
    json
    GIT_REPOSITORY https://github.com/nlohmann/json.git
    GIT_TAG v3.11.3
)
FetchContent_MakeAvailable(json)

# {fmt} - Fast formatting
FetchContent_Declare(
    fmt
    GIT_REPOSITORY https://github.com/fmtlib/fmt.git
    GIT_TAG 10.2.1
)
FetchContent_MakeAvailable(fmt)

# libcurl - HTTP client
find_package(CURL REQUIRED)

# SQLite3 - Metadata and caching
find_package(SQLite3 REQUIRED)

# Optional: Poppler for PDF support
find_package(Poppler COMPONENTS cpp)
if(Poppler_FOUND)
    set(HAVE_POPPLER TRUE)
    message(STATUS "Poppler found - PDF support enabled")
    add_compile_definitions(HAVE_POPPLER)
endif()

# Optional: ICU for text encoding detection
find_package(ICU COMPONENTS uc i18n)
if(ICU_FOUND)
    set(HAVE_ICU TRUE)
    message(STATUS "ICU found - Advanced text encoding support enabled")
    add_compile_definitions(HAVE_ICU)
endif()

# Optional: libxlsxwriter for Excel support  
find_library(XLSXWRITER_LIB xlsxwriter)
if(XLSXWRITER_LIB)
    set(HAVE_XLSXWRITER TRUE)
    message(STATUS "libxlsxwriter found - Excel support enabled")
    add_compile_definitions(HAVE_XLSXWRITER)
endif()

# ONNX Runtime - Download pre-built binaries
set(ONNX_VERSION "1.16.3")
if(WIN32)
    set(ONNX_PLATFORM "win-x64")
    set(ONNX_EXT "zip")
else()
    set(ONNX_PLATFORM "linux-x64")
    set(ONNX_EXT "tgz")
endif()

set(ONNX_URL "https://github.com/microsoft/onnxruntime/releases/download/v${ONNX_VERSION}/onnxruntime-${ONNX_PLATFORM}-${ONNX_VERSION}.${ONNX_EXT}")
set(ONNX_DIR "${CMAKE_BINARY_DIR}/onnxruntime")

if(NOT EXISTS "${ONNX_DIR}")
    message(STATUS "Downloading ONNX Runtime ${ONNX_VERSION}...")
    FetchContent_Declare(
        onnxruntime
        URL ${ONNX_URL}
        SOURCE_DIR ${ONNX_DIR}
    )
    FetchContent_MakeAvailable(onnxruntime)
endif()

# Find ONNX Runtime
find_library(ONNX_RUNTIME_LIB 
    NAMES onnxruntime
    PATHS "${ONNX_DIR}/lib"
    NO_DEFAULT_PATH
)
set(ONNX_RUNTIME_INCLUDE "${ONNX_DIR}/include")

# ============================================================================
# Core Library
# ============================================================================
add_library(vdb_core STATIC
    src/core/vector_ops.cpp
    src/core/distance.cpp
    src/core/thread_pool.cpp
    src/index/hnsw.cpp
    src/index/flat.cpp
    src/storage/mmap_store.cpp
    src/storage/metadata.cpp
    src/embeddings/onnx_runtime.cpp
    src/embeddings/text_encoder.cpp
    src/embeddings/image_encoder.cpp
    src/database.cpp
    src/ingest/markdown_parser.cpp
    src/ingest/gold_standard_ingest.cpp
    src/adapters/data_adapter.cpp
    src/adapters/csv_adapter.cpp
    src/adapters/json_adapter.cpp
    src/adapters/fred_adapter.cpp
    src/adapters/http_client.cpp
    src/storage/sqlite_store.cpp
)

target_include_directories(vdb_core PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${ONNX_RUNTIME_INCLUDE}
)

target_link_libraries(vdb_core PUBLIC
    nlohmann_json::nlohmann_json
    fmt::fmt
    ${ONNX_RUNTIME_LIB}
    CURL::libcurl  # HTTP client
    SQLite::SQLite3  # Metadata and caching
    z  # zlib for PNG decompression in stb_image
)

# Platform-specific threading
if(WIN32)
    target_compile_definitions(vdb_core PRIVATE VDB_PLATFORM_WINDOWS)
else()
    target_link_libraries(vdb_core PUBLIC pthread)
    target_compile_definitions(vdb_core PRIVATE VDB_PLATFORM_UNIX)
endif()

# GPU support
if(VDB_ENABLE_GPU)
    target_compile_definitions(vdb_core PRIVATE VDB_GPU_ENABLED)
endif()

# ============================================================================
# CLI Tool
# ============================================================================
add_executable(vdb_cli
    src/cli/main.cpp
)

target_link_libraries(vdb_cli PRIVATE vdb_core)

# ============================================================================
# Python Bindings
# ============================================================================
if(VDB_BUILD_PYTHON)
    find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
    
    FetchContent_Declare(
        pybind11
        GIT_REPOSITORY https://github.com/pybind/pybind11.git
        GIT_TAG v2.11.1
    )
    FetchContent_MakeAvailable(pybind11)
    
    pybind11_add_module(pyvdb
        bindings/python/pyvdb.cpp
    )
    
    target_link_libraries(pyvdb PRIVATE vdb_core)
    
    # Install Python module
    install(TARGETS pyvdb
        LIBRARY DESTINATION ${Python3_SITELIB}
    )
endif()

# ============================================================================
# Tests
# ============================================================================
if(VDB_BUILD_TESTS)
    enable_testing()
    
    FetchContent_Declare(
        googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG v1.14.0
    )
    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(googletest)
    
    add_executable(vdb_tests
        tests/test_vector_ops.cpp
        tests/test_distance.cpp
        tests/test_hnsw.cpp
        tests/test_storage.cpp
        tests/test_embeddings.cpp
        tests/test_ingest.cpp
    )
    
    target_link_libraries(vdb_tests PRIVATE
        vdb_core
        GTest::gtest_main
    )
    
    include(GoogleTest)
    gtest_discover_tests(vdb_tests)
endif()

# ============================================================================
# Benchmarks
# ============================================================================
if(VDB_BUILD_BENCHMARKS)
    add_executable(vdb_benchmark
        tools/benchmark.cpp
    )
    target_link_libraries(vdb_benchmark PRIVATE vdb_core)
endif()

# ============================================================================
# Installation
# ============================================================================
install(TARGETS vdb_core vdb_cli
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)

install(DIRECTORY include/vdb
    DESTINATION include
)

# ============================================================================
# Summary
# ============================================================================
message(STATUS "")
message(STATUS "VectorDB Configuration:")
message(STATUS "  Build Type:     ${CMAKE_BUILD_TYPE}")
message(STATUS "  C++ Standard:   ${CMAKE_CXX_STANDARD}")
message(STATUS "  AVX2:           ${VDB_USE_AVX2}")
message(STATUS "  AVX-512:        ${VDB_USE_AVX512}")
message(STATUS "  GPU Support:    ${VDB_ENABLE_GPU}")
message(STATUS "  Python Bindings: ${VDB_BUILD_PYTHON}")
message(STATUS "  Tests:          ${VDB_BUILD_TESTS}")
message(STATUS "  Benchmarks:     ${VDB_BUILD_BENCHMARKS}")
message(STATUS "")
